@@ -55,10 +55,14 @@ Source_ac::Source_ac()
   Model = "Pac";
   Name  = "P";
 
-  Props.append(new Property("Num", "1", true, QObject::tr("number of the port")));
-  Props.append(new Property("Z", "50 Ohm", true, QObject::tr("port impedance")));
-  Props.append(new Property("P", "0 dBm", true, QObject::tr("ac power in Watts")));
-  Props.append(new Property("f", "1 GHz", true, QObject::tr("frequency in Hertz")));
+  Props.append(new Property("Num", "1", true,
+		QObject::tr("number of the port")));
+  Props.append(new Property("Z", "50 Ohm", true,
+		QObject::tr("port impedance")));
+  Props.append(new Property("P", "0 dBm", false,
+		QObject::tr("ac power in Watts")));
+  Props.append(new Property("f", "1 GHz", false,
+		QObject::tr("frequency in Hertz")));
 }
 
 Source_ac::~Source_ac()
