@@ -78,7 +78,7 @@ void Marker::initText(int n)
   QString Text_;
   double yr = *((pGraph->cPointsY) + 2*n);
   double yi = *((pGraph->cPointsY) + 2*n+1);
-  if(fabs(yi) < 1e-250) Text = QString::number(yr);
+  if(fabs(yi) < 1e-250) Text_ = QString::number(yr);
   else {
     Text_ = QString::number(yi,'g',Precision);
     if(Text_.at(0) == '-') { Text_.at(0) = 'j'; Text_ = '-'+Text_; }
@@ -133,7 +133,7 @@ void Marker::createText()
   QString Text_;
   double yr = *((pGraph->cPointsY) + 2*n);
   double yi = *((pGraph->cPointsY) + 2*n+1);
-  if(fabs(yi) < 1e-250) Text = QString::number(yr);
+  if(fabs(yi) < 1e-250) Text_ = QString::number(yr);
   else {
     Text_ = QString::number(yi,'g',Precision);
     if(Text_.at(0) == '-') { Text_.at(0) = 'j'; Text_ = '-'+Text_; }
